--- a/templates/index.html
+++ b/templates/index.html
@@ -98,7 +98,7 @@
       </li>
       <li role="presentation" class="active" id="button_s3" style="cursor:pointer" ><a>攝影機</a></li>
       <li role="presentation" class="active" id="button_s2" style="cursor:pointer"><a>路障</a></li>
-      <li role="presentation" id="button_s4" style="cursor:pointer"><a>歷史紀錄</a></li>
+      <!-- <li role="presentation" id="button_s4" style="cursor:pointer"><a>歷史紀錄</a></li> -->
   <!--     <li role="presentation" class="disabled" id="dog" style="cursor:pointer"><a>狗</a></li> -->
       <li id="dog" role="presentation" class="dropdown disabled" class="active">
         <a id="dog_dropdown" class="dropdown-toggle"  role="button" aria-haspopup="true" aria-expanded="false" >
