--- a/templates/index.html
+++ b/templates/index.html
@@ -32,6 +32,8 @@
     
     <script type="text/javascript"
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCJJZnblGUcntIKP4Cn0TZv5UzBN4xDSB0"></script><!-- AIzaSyCT1MkhTlOJjKg1NLqb0yyD_0o3Q6_-dr8 -->
+    
+
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css">
     
 
@@ -144,12 +146,62 @@
     </ul>
   </header>
   <body>
+  <!-- <form class="bg-primary form-inline" style="">
+      
+        <label  class="col-sm-2 col-2 col-xl-2">起點</label>
+        <div class="col-sm-10 col-10 col-xl-10">
+          <input type="text"  readonly disabled class="form-control"  value="現在位置"><br>
+        </div>
+      
+  </form> -->
+  <div class="bg-primary form-inline" style="margin-top:1px ;margin-bottom: 0px" >
+      <div class="form-group " style="margin-bottom: 0px">
+        <div style="height:5px;"> &nbsp; </div>
+        <label  class="col-sm-2 col-2 col-xl-2">起點</label>
+        <div class="col-sm-10 col-10 col-xl-10">
+          <input readonly disabled class="form-control" id="input_destination" placeholder="現在位置">
+        </div>
+        <div style="height:5px;"> &nbsp; </div>
+      </div>
+  </div>
+
+  <div class="bg-primary form-inline" style="margin-bottom: 0px">
+      <div class="form-group " style="margin-bottom: 0px">
+        <label  class="col-sm-2 col-2 col-xl-2">終點</label>
+        <div class="col-sm-10 col-10 col-xl-10">
+          <input  class="form-control" id="autocomplete" placeholder="選擇目的地">
+        </div>
+      </div>
+      <br>
+      
+      <button type="submit" class="btn pull-right btn-primary" style="margin: 15px">立即出發</button>
+  </div>
+  
+
+<!-- 
+    <form class="bg-primary" style="margin: 1px">
+      <div class="form-inline">
+        <label  class="col-sm-12 col-12 col-xl-12">起點</label>
+        <div class="col-sm-10 col-10 col-xl-10">
+          <input type="text"  readonly disabled class="form-control"  value="現在位置">
+        </div>
+      </div>
+      <div class="form-inline">
+        <label  class="col-sm-12 col-12 col-xl-12">終點</label>
+        <div class="col-sm-10 col-10 col-xl-10">
+          <input  class="form-control" id="input_destination" placeholder="選擇目的地">
+        </div>
+      </div><br>
+      <div class="bg-info">
+      <button type="submit" class="btn pull-right btn-primary" style="margin: 15px">立即出發</button>
+      </div>
+    </form> -->
+    
     <div id="snackbar"></div>
 
-    <div id="Location-map">  </div>
-      <button style="display: none;" id="fuck_off" class="btn btn-danger">×</button>
+    <!-- <div id="Location-map">  </div> -->
+      <button style="display: none;" id="fuck_off" class="btn btn-danger">X</button>
   <div class="container" id="wrapper" overflow="hidden" >
-      <!-- <iframe  id = "Video-Display"  src="" frameborder="20" marginheight="0" marginwidth="0"  scrolling="no" width="100%" height="100%" ></iframe> -->
       <img src=""  id = "Video-Display" class="shrinkToFit" width="495" height="278">
   </div>       
         <!--width="560" height="315"-->
