--- a/templates/admin.html
+++ b/templates/admin.html
@@ -13,7 +13,7 @@
     <script src="{{ url_for('static', filename='dai.js') }}"></script>
     <script src="{{ url_for('static', filename='img/history_start_icon.png') }}"></script>
     <script src="{{ url_for('static', filename='img/history_end_icon.png') }}"></script>
-    <script src="{{ url_for('static', filename='dai-app.js') }}"></script>
+    <script src="{{ url_for('static', filename='dai-app-admin.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='map-icons.js') }}"></script> 
     <script type=text/javascript src="{{ url_for('static', filename='jquery.datetimepicker.full.min.js') }}"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -96,12 +96,12 @@
           <li id="ob_add" style="cursor:pointer"><a>新增路障</a></li>
         </ul>
       </li> -->
-      <li role="presentation" class="active" id="button_s3" style="cursor:pointer" ><a>攝影機</a></li>
-      <li role="presentation" class="active" id="button_s2" style="cursor:pointer"><a>路障</a></li>
-      <li role="presentation" id="button_route" style="cursor:pointer"><a id="text">路徑規劃</a></li>
+      <li role="presentation" id="cam_add" style="cursor:pointer" ><a>新增攝影機</a></li>
+      <li role="presentation" id="ob_add" style="cursor:pointer"><a>新增路障</a></li>
+      <!-- <li role="presentation" id="button_route" style="cursor:pointer"><a id="text">路徑規劃</a></li> -->
 
       
-      <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"  aria-hidden="true">
+      <!-- <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"  aria-hidden="true">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
@@ -119,29 +119,24 @@
 
             </div>
             <div class="modal-footer">
-              <!-- <button type="button" class="btn btn-default" data-dismiss="modal">關閉</button> -->
               <input type="submit" value="確認" class="btn btn-primary" data-dismiss="modal" id="history_check" style="font-size:18px;">
-              <!-- <button type="button" class="btn btn-primary" data-dismiss="modal" id="history_check" style="font-size:18px;">確認</button> -->
             </div>
           </form>
           </div>
         </div>
-      </div>
+      </div> -->
       
 
   <!--     <li role="presentation" class="disabled" id="dog" style="cursor:pointer"><a>狗</a></li> -->
-      <li id="dog" role="presentation" class="dropdown disabled" class="active">
+      <!-- <li id="dog" role="presentation" class="dropdown disabled" class="active">
         <a id="dog_dropdown" class="dropdown-toggle"  role="button" aria-haspopup="true" aria-expanded="false" >
           狗 <span class="caret"></span>
         </a>
-        <ul class="dropdown-menu" id="dog-list">
+        <ul class="dropdown-menu" id="dog-list"> -->
 <!--           <li id="button_d1" style="cursor:pointer"><a>狗1</a></li>
           <li id="cam_add" style="cursor:pointer"><a>狗2</a></li>
           <li id="ob_add" style="cursor:pointer"><a>狗3</a></li> -->
         </ul>
-      </li>
-      </li>
-    </ul>
   </header>
   <body>
 
