--- a/templates/admin.html
+++ b/templates/admin.html
@@ -13,7 +13,7 @@
     <script src="{{ url_for('static', filename='dai.js') }}"></script>
     <script src="{{ url_for('static', filename='img/history_start_icon.png') }}"></script>
     <script src="{{ url_for('static', filename='img/history_end_icon.png') }}"></script>
-    <script src="{{ url_for('static', filename='dai-app.js') }}"></script>
+    <script src="{{ url_for('static', filename='dai-app-admin.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='map-icons.js') }}"></script> 
     <script type=text/javascript src="{{ url_for('static', filename='jquery.datetimepicker.full.min.js') }}"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -96,12 +96,12 @@
           <li id="ob_add" style="cursor:pointer"><a>新增路障</a></li>
         </ul>
       </li> -->
-      <li role="presentation" class="active" id="button_s3" style="cursor:pointer" ><a>攝影機</a></li>
-      <li role="presentation" class="active" id="button_s2" style="cursor:pointer"><a>路障</a></li>
-      <li role="presentation" id="button_route" style="cursor:pointer"><a id="text">路徑規劃</a></li>
+      <li role="presentation" id="cam_add" style="cursor:pointer" ><a>新增攝影機</a></li>
+      <li role="presentation" id="ob_add" style="cursor:pointer"><a>新增路障</a></li>
+      <!-- <li role="presentation" id="button_route" style="cursor:pointer"><a id="text">路徑規劃</a></li> -->
 
       
-      <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"  aria-hidden="true">
+      <!-- <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"  aria-hidden="true">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
@@ -119,29 +119,24 @@
 
             </div>
             <div class="modal-footer">
-              <!-- <button type="button" class="btn btn-default" data-dismiss="modal">關閉</button> -->
               <input type="submit" value="確認" class="btn btn-primary" data-dismiss="modal" id="history_check" style="font-size:18px;">
-              <!-- <button type="button" class="btn btn-primary" data-dismiss="modal" id="history_check" style="font-size:18px;">確認</button> -->
             </div>
           </form>
           </div>
         </div>
-      </div>
+      </div> -->
       
 
   <!--     <li role="presentation" class="disabled" id="dog" style="cursor:pointer"><a>狗</a></li> -->
-      <li id="dog" role="presentation" class="dropdown disabled" class="active">
+      <!-- <li id="dog" role="presentation" class="dropdown disabled" class="active">
         <a id="dog_dropdown" class="dropdown-toggle"  role="button" aria-haspopup="true" aria-expanded="false" >
           狗 <span class="caret"></span>
         </a>
-        <ul class="dropdown-menu" id="dog-list">
+        <ul class="dropdown-menu" id="dog-list"> -->
 <!--           <li id="button_d1" style="cursor:pointer"><a>狗1</a></li>
           <li id="cam_add" style="cursor:pointer"><a>狗2</a></li>
           <li id="ob_add" style="cursor:pointer"><a>狗3</a></li> -->
         </ul>
-      </li>
-      </li>
-    </ul>
   </header>
   <body>
 
@@ -149,24 +144,25 @@
   <div class="bg-primary form-inline" style="margin-top:1px ;margin-bottom: 0px" >
       <div class="form-group " style="margin-bottom: 0px">
         <div style="height:5px;"> &nbsp; </div>
-        <label  class="col-sm-2 col-2 col-xl-2">起點</label>
+        <label  class="col-sm-2 col-2 col-xl-2">說明</label>
         <div class="col-sm-10 col-10 col-xl-10">
-          <input readonly disabled class="form-control" placeholder="現在位置">
+          <input readonly disabled class="form-control" placeholder="請輸入說明">
         </div>
         <div style="height:5px;"> &nbsp; </div>
       </div>
   </div>
 
   <div class="bg-primary form-inline" style="margin-bottom: 0px">
-      <div class="form-group " style="margin-bottom: 0px">
+      <!-- <div class="form-group " style="margin-bottom: 0px">
         <label  class="col-sm-2 col-2 col-xl-2">終點</label>
         <div class="col-sm-10 col-10 col-xl-10">
           <input  id="pac-input"  class="form-control controls"  placeholder="選擇目的地">
         </div>
-      </div>
+      </div> -->
       <br>
       
-      <button type="submit" id="button_s5" class="btn pull-right btn-primary" style="margin: 15px">立即出發</button>
+      <button type="submit" id="button" class="btn pull-right btn-primary" style="margin: 15px">刪除</button>
+      <button type="submit" id="button" class="btn pull-right btn-primary" style="margin: 15px">新增</button>
   </div>
   </div>
     <div id="snackbar"></div>
@@ -175,7 +171,7 @@
       <button style="display: none;" id="fuck_off" class="btn btn-default">X</button>
   <div class="container" id="wrapper" overflow="hidden" >
       <img src=""  id = "Video-Display" class="shrinkToFit" width="495" height="278" style="display: none;">
-  </div>       
+  </div>         
         
   </body>
 </html>
