dog-id with different color now

--- a/templates/index.html
+++ b/templates/index.html
@@ -127,14 +127,25 @@
           </div>
         </div>
       </div>
-      
+   <!-- <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a class="active"  href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">One more separated link</a></li>
+          </ul>
+        </li>       -->
 
   <!--     <li role="presentation" class="disabled" id="dog" style="cursor:pointer"><a>狗</a></li> -->
-      <li id="dog" role="presentation" class="dropdown disabled" class="active">
+      <li id="dog" role="presentation" class="dropdown disabled" class="active" >
         <a id="dog_dropdown" class="dropdown-toggle"  role="button" aria-haspopup="true" aria-expanded="false" >
           狗 <span class="caret"></span>
         </a>
-        <ul class="dropdown-menu" id="dog-list">
+        <ul class="dropdown-menu" id="dog-list" >
 <!--           <li id="button_d1" style="cursor:pointer"><a>狗1</a></li>
           <li id="cam_add" style="cursor:pointer"><a>狗2</a></li>
           <li id="ob_add" style="cursor:pointer"><a>狗3</a></li> -->
@@ -145,7 +156,7 @@
   </header>
   <body>
 
-    <div id="input_destination" style="display:none">
+  <div id="input_destination" style="display:none">
   <div class="bg-primary form-inline" style="margin-top:1px ;margin-bottom: 0px" >
       <div class="form-group " style="margin-bottom: 0px">
         <div style="height:5px;"> &nbsp; </div>
@@ -166,7 +177,7 @@
       </div>
       <br>
       
-      <button type="submit" class="btn pull-right btn-primary" style="margin: 15px">立即出發</button>
+      <button type="submit" id="button_s5" class="btn pull-right btn-primary" style="margin: 15px">立即出發</button>
   </div>
   </div>
     <div id="snackbar"></div>
