dog-id with different color now

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -7,7 +7,7 @@
   <head>
     <title>Realtime Traffic Information</title>
     <script type=text/javascript src="{{ url_for('static', filename='jquery.js') }}"></script>
-    <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='style-admin.css') }}" rel="stylesheet">
     <script src="{{ url_for('static', filename='csmapi.js') }}"></script>
     <script src="{{ url_for('static', filename='dan.js') }}"></script>
     <script src="{{ url_for('static', filename='dai.js') }}"></script>
