--- a/static/style-admin.css
+++ b/static/style-admin.css
@@ -9,7 +9,7 @@ html,body{
     position:absolute;
     left:0%;
     z-index: 10;
-    top: 41px;
+    top: 90px;
     height: 315px;
     width: 560px;
     margin: 0;
@@ -32,19 +32,21 @@ html,body{
   position: absolute;
   z-index: 20;
   left:530px;
-  top:40px;
+  top:90px;
 }
 @media (max-width: 480px) {
 
     #Video-Display{
         max-width:100%;
         max-height: 40%;
+        top:34%;
         
         
     }
     #fuck_off{
       /*margin-left: 5px;*/
-      left:90%;  
+      left:90%;
+      top:34%;  
     }
 
 }
