--- a/templates/index.html
+++ b/templates/index.html
@@ -131,7 +131,7 @@
       
 
   <!--     <li role="presentation" class="disabled" id="dog" style="cursor:pointer"><a>狗</a></li> -->
-      <li id="dog" role="presentation" class="dropdown disabled" class="active">
+      <li id="dog" role="presentation" class="dropdown" class="active">
         <a id="dog_dropdown" class="dropdown-toggle"  role="button" aria-haspopup="true" aria-expanded="false" >
           狗 <span class="caret"></span>
         </a>
