--- a/templates/index.html
+++ b/templates/index.html
@@ -133,7 +133,7 @@
   <!--     <li role="presentation" class="disabled" id="dog" style="cursor:pointer"><a>狗</a></li> -->
       <li id="dog" role="presentation" class="dropdown" class="active">
         <a id="dog_dropdown" class="dropdown-toggle"  role="button" aria-haspopup="true" aria-expanded="false" >
-          狗 <span class="caret"></span>
+          type <span class="caret"></span>
         </a>
         <ul class="dropdown-menu" id="dog-list">
 <!--           <li id="button_d1" style="cursor:pointer"><a>狗1</a></li>
