admin info add cancel button

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -191,7 +191,7 @@
           </div>
       </div>
 
-
+      <button type="submit" id="cam_cancel_2" class="btn pull-right btn-primary" style="margin: 15px">取消</button>
       <button type="submit" id="cam_del" class="btn pull-right btn-primary" style="margin: 15px">刪除</button>
       <button type="submit" id="cam_info" class="btn pull-right btn-primary" style="margin: 15px">修改</button>
 
@@ -211,7 +211,7 @@
           </div>
       </div>
 
-
+      <button type="submit" id="ob_cancel_2" class="btn pull-right btn-primary" style="margin: 15px">取消</button>
       <button type="submit" id="ob_del" class="btn pull-right btn-primary" style="margin: 15px">刪除</button>
       <button type="submit" id="ob_info" class="btn pull-right btn-primary" style="margin: 15px">修改</button>
 
