starting point can change by user

--- a/templates/index.html
+++ b/templates/index.html
@@ -150,7 +150,8 @@
         <div style="height:5px;"> &nbsp; </div>
         <label  class="col-sm-2 col-2 col-xl-2">起點</label>
         <div class="col-sm-10 col-10 col-xl-10">
-          <input readonly disabled class="form-control" placeholder="現在位置">
+          <!-- <input readonly disabled class="form-control" placeholder="現在位置"> -->
+          <input id="autocomplete2" type="text" class="form-control controls"  placeholder="現在位置">
         </div>
         <div style="height:5px;"> &nbsp; </div>
       </div>
