[MAP] Add CountGeoData_O feature for parking lot display

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,8 +12,7 @@
     <script src="{{ url_for('static', filename='dan.js') }}"></script>
     <script src="{{ url_for('static', filename='dai.js') }}"></script>
     <script src="{{ url_for('static', filename='dai-app.js') }}"></script>
-    <script src="{{ url_for('static', filename='img/history_start_icon.png') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='map-icons.js') }}"></script> 
+    <!-- <script src="{{ url_for('static', filename='img/history_start_icon.png') }}"></script> -->
     <script type=text/javascript src="{{ url_for('static', filename='jquery.datetimepicker.full.min.js') }}"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Latest compiled and minified CSS -->
@@ -30,6 +29,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCT1MkhTlOJjKg1NLqb0yyD_0o3Q6_-dr8&libraries=places"></script>
     <!-- <script type="text/javascript"
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCJJZnblGUcntIKP4Cn0TZv5UzBN4xDSB0"></script> --><!-- AIzaSyCT1MkhTlOJjKg1NLqb0yyD_0o3Q6_-dr8 -->
+    <script type="text/javascript" src="{{ url_for('static', filename='map-icons.js') }}"></script> 
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css">
     
 
